--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,8 +1,7 @@
-
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'my_new_project'
+name: 'adventure_works'
 version: '1.0.0'
 config-version: 2
 
@@ -24,7 +23,6 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 
-
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
 
@@ -36,7 +34,15 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
-  my_new_project:
+  adventure_works:
     # Applies to all files under models/example/
-    example:
-      +materialized: table
+      intermediate:
+        +schema: int
+
+      marts:
+        +materialized: table
+        +schema: marts
+
+      staging:
+        +schema: stg
+        erp:
